# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
.pytest_cache/v/cache/: nodeids
mts/: mts-ru.html
mts/mts-ru_files/: bundles-angular-layout.js?v=IkdkOvRRDLKKPyykp2B5os5t5ZPg-3GqoYvB78D4n9I  bundles-angular-mainpage.js?v=wcoXxj6tNQ5zWUq2MLVwyOoYMzOoJZbJwKjj2xr9pdQ  bundles-globals.js?v=yOwjQgzz32em7WKE8QIsc5RnTOjGtoPxOVeeZ8jvc-s  bundles-headsection.js?v=ZkcLvhrJarX9NM1xStcQ7zhkNorxud7W9UE23l-ldQQ  bundles-pollwidget.js?v=1OyHq8pOeCJWrMKg1fVHtEXnnEgvRWZlORVfscxZilM  bundles-polyfills.js  bundles-qascripts.js?v=oJXjJaLj_J3tD38joYlLIZ9gWrrOuYsLNK-P-tju6X4  bundles-sspbanner.js?v=5_d71Rt2qBTzqSk1NIxQlHRUYwGRJrpKvIadMK8yA2c  bundles-zone.js?v=4K9rF-pHkrPnYxXc3Jgulw9qLq7zD8AkN5us_eAFCtQ  static-mts-ru-mts-rf-static-1172-scripts-promo-bundles-base.js  styles-qa-bundles-poll.css?v=1ccfaRDL849y1MD0q8uuER87N9AgdECZZNwNLGhCDcs
page_loader/: __init__.py  assets.py  cli.py  common.py  custom_exseptions.py  download.py  exceptions.py  logging.py  maker.py  names.py  normalize_data.py  page_loader.py  pager.py  parser.py  resources.py  settings_logging.py  storage.py  url.py  web_data_processing.py
page_loader/scripts/: __init__.py  page_loader.py
pageloader/: maker.py  name.py  pager.py  parser.py
pageloader/scripts/: main.py  untitled3.py
riptutorial/: riptutorial-com.html
tests/: test_.py  test_download.py  test_download_function.py  test_exceptions.py  test_main.py  test_naming.py  test_page_loader.py  test_prepare_assets_function.py
tests/fixtures/: example-com.html  file_js.js  page_after.html  page_before.html  riptutorial-com.html  ru-hexlet-io.html  web_page.html
tests/riptutorial/riptutorial-com_files/: assets-css-master-min-css-v-1-0-0.21822
