[tool.poetry]
name = "altvec_page_loader"
version = "0.4.4"
description = "Page loader project on hexlet"
authors = ["altvec <me@sergeykalistratov.com>"]
repository = "https://github.com/altvec/python-project-lvl3"
license = "MIT"
packages = [
    { include = "page_loader" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "License :: Freeware", 
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26"
beautifulsoup4 = "^4.10"
progress = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
wemake-python-styleguide = "^0.15.3"
flake8 = "^3.9"
coverage = "^6.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
