[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = ""
authors = ["Nikita <Nikita.Clark@yandex.ru>"]
packages = [
 { include = 'page_loader' },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.0"
bs4 = "^0.0.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
requests_mock = "^1.8.0"
flake8 = "^3.8.4"
coverage = "^5.3"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
page-loader = 'page_loader.scripts.page_loader:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
